omni/tests/goldens/types/unknown_type_25.omni
let value25:Mystery25 = 1
